Semana 3 Ajuste seleção de empresa

--- a/src/main/webapp/Empresa.xhtml
+++ b/src/main/webapp/Empresa.xhtml
@@ -86,7 +86,7 @@
 				</p:dataTable>
 
 				<!-- Dialogo inclusão/alteração -->
-				<p:dialog header="Dados Conta" 
+				<p:dialog header="Dados da Empresa" 
 						  widgetVar="wgDados" 
 						  id="dialogo"
 						  resizable="false" 
