--- a/src/main/webapp/resources/ajudapesquisa/pesquisaEmpresa.xhtml
+++ b/src/main/webapp/resources/ajudapesquisa/pesquisaEmpresa.xhtml
@@ -43,7 +43,7 @@
 	                 value="#{pesquisaEmpresa.listaEmpresas}" var="empresa"
 	                 id="tabela"
 	                 rows="15" 
-	                 paginator="true" paginatorPosition="bottom"
+	                 paginator="true" paginatorPosition="top"
 	                 emptyMessage="Nenhuma Empresa Encontrada">
 	        
 	        <!-- Botão de Seleção -->            
