--- a/src/main/webapp/R42Login.xhtml
+++ b/src/main/webapp/R42Login.xhtml
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
     xmlns:h="http://xmlns.jcp.org/jsf/html" 
-    xmlns:f="http://xmlns.jcp.org/jsf/core"
-    xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-    xmlns:p="http://primefaces.org/ui">
+    xmlns:f="http://xmlns.jcp.org/jsf/core">
 
 <h:head>
 
@@ -18,7 +16,6 @@
     <title>Marvin</title>
 
     <h:outputStylesheet library="resvut42" name="css/r42Login.css" />      
-    <h:outputScript target="body" library="primefaces" name="jquery/jquery.js" />    
   
 </h:head>
 
