Cadastro de bancos

--- a/src/main/webapp/Conta.xhtml
+++ b/src/main/webapp/Conta.xhtml
@@ -18,7 +18,7 @@
 				<p:growl id="msg-frm" showDetail="true"/> 
 				
 				<!-- Barra de Ferramentas -->
-				<p:toolbar style="margin-bottom:10px" id="toolbar">
+				<p:toolbar styleClass="r42-toolbar" id="toolbar">
 					<p:toolbarGroup align="left">
 						<p:commandButton id="bto-novo" 
 										 title="Novo" 
@@ -50,8 +50,8 @@
 										<p:confirm icon="fa fa-warning" header="Exclusão de Registro" message="Confirma a exclusão da Conta?"/>
 						</p:commandButton>
 					</p:toolbarGroup>
-					<p:toolbarGroup align="right">
-						<p style="margin-top: 5px; margin-bottom: 5px; margin-right: 5px">Cadastro de Contas Contábeis</p>
+					<p:toolbarGroup align="right" styleClass="r42-toolbar-right">
+						<p>Cadastro de Contas Contábeis</p>
 					</p:toolbarGroup>
 				</p:toolbar>
 
