--- a/src/main/webapp/R42Login.xhtml
+++ b/src/main/webapp/R42Login.xhtml
@@ -26,10 +26,10 @@
         <h:panelGrid class="r42-PanelLogin">
 
             <h:outputText class="textoUsuarioSenha" value="Usuário: "/>
-            <input class="usuarioSenha" type="text" name="username"/><br/>
+            <input class="usuarioSenha" type="text" placeholder="usuario" name="username"/><br/>
                         
             <h:outputText class="textoUsuarioSenha" value="Senha: " for="password"/>
-            <input class="usuarioSenha" type="password" name="password"/> <input class="acessar" type="submit" value="OK"/>
+            <input class="usuarioSenha" type="password" placeholder="senha" name="password"/> <input class="acessar" type="submit" value="OK"/>
                 
         </h:panelGrid>
 
