--- a/src/main/webapp/Banco.xhtml
+++ b/src/main/webapp/Banco.xhtml
@@ -250,46 +250,13 @@
 						<!-- Aba Contatos -->
 						<p:tab title="Contatos">
 
-							<p:panelGrid id="panelContato" 
-							             columns="2" 
-							             layout="grid" 
-							             styleClass="panelgrid-noborder r42-panelgrid"
-								         columnClasses="ui-grid-col-3, ui-grid-col-9">
+	       					<p:commandButton id="bto-add" 
+								             title="Novo" 
+								             icon="fa fa-plus" 
+									         action="#{controleBanco.addContato}" 
+									         process="@this" 
+									         update="tabContatos" />
 
-								<p:outputLabel value="Nome" for="nome" />
-								<p:inputText id="nome" size="50" maxlength="50" 
-								             value="#{controleBanco.bancoContatos.contato.nomeContato}"
-									         onblur="value=value.toUpperCase()" />
-
-								<p:outputLabel value="E-mail" for="email" />
-								<p:inputText id="email" size="50" maxlength="50" 
-								             value="#{controleBanco.bancoContatos.contato.email}"
-									         onblur="value=value.toLowerCase()" />
-
-								<p:outputLabel value="Telefone" for="telefone" />
-								<p:inputMask id="telefone" size="15" maxlength="15" 
-								             value="#{controleBanco.bancoContatos.contato.telefone}"
-									         mask="(99)-9999-9999" />
-
-								<p:outputLabel value="Ramal" for="ramal" />
-								<p:inputText id="ramal" size="5" maxlength="5" 
-								             value="#{controleBanco.bancoContatos.contato.ramal}"
-									         onblur="value=value.toUpperCase()" />
-
-								<p:outputLabel value="Celular" for="celular" />
-								<p:inputMask id="celular" size="15" maxlength="15" 
-								             value="#{controleBanco.bancoContatos.contato.celular}"
-									         mask="(99)-99999-9999" />
-
-								<p:commandButton id="bto-add" 
-								                 title="Atualizar lista" 
-								                 icon="fa fa-arrow-down" 
-								                 value="Atualizar"
-									             action="#{controleBanco.addContato}" 
-									             process="panelContato" 
-									             update="panelContato tabContatos" />
-
-							</p:panelGrid>
 
 							<!-- Listagem dos dados -->
 							<p:dataTable value="#{controleBanco.listaBancoContatos}" 
@@ -299,17 +266,12 @@
 							             rows="3"
 								         paginator="true" 
 								         paginatorPosition="top" 
-								         selection="#{controleBanco.bancoContatos}" 
-								         selectionMode="single"
-								         rowKey="#{c.idContato}" 
 								         emptyMessage="Nenhum Contato Cadastrado">
 
-								<!-- Evento ajax, para doubleClick na lista de contatos -->
-								<p:ajax event="rowSelect" update="frm:panel-dados:panelContato frm:panel-dados:tabContatos" />
-								<p:ajax event="rowUnselect" update="frm:panel-dados:panelContato frm:panel-dados:tabContatos"
-									    listener="#{controleBanco.limpaContato}" />
-
 								<!-- Colunas -->
+						        <p:column width="20">
+						            <p:rowToggler />
+						        </p:column>								
 								<p:column headerText="Nome" width="200">
 									<h:outputText value="#{c.contato.nomeContato}" />
 								</p:column>
@@ -330,9 +292,47 @@
 									                 title="Remover" 
 									                 action="#{controleBanco.removeContato(c)}" 
 									                 process="@this"
-										             update="frm:panel-dados:panelContato frm:panel-dados:tabContatos" />
+										             update="tabContatos" />
 								</p:column>
 
+                                <p:rowExpansion>
+		                            <p:panelGrid id="rowExp" 
+		                                         columns="2" 
+		                                         layout="grid" 
+		                                         styleClass="panelgrid-noborder r42-panelgrid"
+		                                         columnClasses="ui-grid-col-3, ui-grid-col-9">
+		
+		                                <p:outputLabel value="Nome" for="nome" />
+		                                <p:inputText id="nome" size="50" maxlength="50" 
+		                                             value="#{c.contato.nomeContato}"
+		                                             onblur="value=value.toUpperCase()" />
+		
+		                                <p:outputLabel value="E-mail" for="email" />
+		                                <p:inputText id="email" size="50" maxlength="50" 
+		                                             value="#{c.contato.email}"
+		                                             onblur="value=value.toLowerCase()" />
+		
+		                                <p:outputLabel value="Telefone" for="telefone" />
+		                                <p:inputMask id="telefone" size="15" maxlength="15" 
+		                                             value="#{c.contato.telefone}"
+		                                             mask="(99)-9999-9999" />
+		
+		                                <p:outputLabel value="Ramal" for="ramal" />
+		                                <p:inputText id="ramal" size="5" maxlength="5" 
+		                                             value="#{c.contato.ramal}"
+		                                             onblur="value=value.toUpperCase()" />
+		
+		                                <p:outputLabel value="Celular" for="celular" />
+		                                <p:inputMask id="celular" size="15" maxlength="15" 
+		                                             value="#{c.contato.celular}"
+		                                             mask="(99)-99999-9999" />
+				
+	                                    <p:commandButton icon="fa fa-check"  
+	                                                     title="ok"  
+	                                                     process="tabContatos"
+	                                                     update="tabContatos" />				
+		                            </p:panelGrid> 
+                                </p:rowExpansion>                                
 							</p:dataTable>
 						</p:tab>
 					</p:tabView>
