--- a/src/main/webapp/Conta.xhtml
+++ b/src/main/webapp/Conta.xhtml
@@ -51,7 +51,7 @@
 						</p:commandButton>
 					</p:toolbarGroup>
 					<p:toolbarGroup align="right" styleClass="r42-toolbar-right">
-						<p>Cadastro de Contas Contábeis</p>
+						<p:outputLabel value="Cadastro de Contas Contábeis"/>
 					</p:toolbarGroup>
 				</p:toolbar>
 
