Melhoria no processo de migração dos dados

--- a/src/main/webapp/Migracao.xhtml
+++ b/src/main/webapp/Migracao.xhtml
@@ -12,6 +12,9 @@
                 <p:growl id="msg-frm" showDetail="true" autoUpdate="true"/> 
                   
                 <p:toolbar styleClass="r42-toolbar" id="toolbar">
+                    <p:toolbarGroup align="left" styleClass="r42-toolbar-right">
+                        <p:outputLabel value="Path: c:\temp\dbf\*.dbf"/>
+                    </p:toolbarGroup>                 
                     <p:toolbarGroup align="right" styleClass="r42-toolbar-right">
                         <p:outputLabel value="Migração de Dados"/>
                     </p:toolbarGroup>                
