Criado opção de baixa de contas a receber e validações

--- a/src/main/webapp/BancoLcto.xhtml
+++ b/src/main/webapp/BancoLcto.xhtml
@@ -116,7 +116,7 @@
                         </span>
                         <p:commandButton    id="bto-transferencia" 
                                             title="Transferência" 
-                                            icon="fa fa-sign-out" 
+                                            icon="fa fa-exchange" 
                                             process="@this" 
                                             update="dialogoTransferencia"
                                             oncomplete="PF('wgDadosTransferencia').show()" 
