ajuste baixa automatica

--- a/src/main/webapp/BancoLcto.xhtml
+++ b/src/main/webapp/BancoLcto.xhtml
@@ -366,7 +366,7 @@
                                                thousandSeparator="."
                                                required="true"/>                                     
         
-                                <p:outputLabel value="Banco crédito" for="bancoTransf"/>                              
+                                <p:outputLabel value="Banco Destino" for="bancoTransf"/>                              
                                 <p:column>                                
                                     <p:inputText id="bancoTransf" size="10"
                                                  value="#{controleBancoLcto.bancoCredito.idBanco}"
