Ajustes entidade, tela

--- a/src/main/webapp/Pagar.xhtml
+++ b/src/main/webapp/Pagar.xhtml
@@ -175,7 +175,7 @@
                         </h:outputText>
                     </p:column>                                                            
                     <p:column headerText="Recebido">
-                        <h:outputText value="#{pagar.recebido}" style="float: right">
+                        <h:outputText value="#{pagar.pago}" style="float: right">
                             <f:convertNumber type="currency" currencySymbol=""/>
                         </h:outputText>
                     </p:column>
