Ajuste de tela, pagar e entidade pagar

--- a/src/main/webapp/Pagar.xhtml
+++ b/src/main/webapp/Pagar.xhtml
@@ -174,7 +174,7 @@
                             <f:convertNumber type="currency" currencySymbol=""/>
                         </h:outputText>
                     </p:column>                                                            
-                    <p:column headerText="Recebido">
+                    <p:column headerText="Pago">
                         <h:outputText value="#{pagar.pago}" style="float: right">
                             <f:convertNumber type="currency" currencySymbol=""/>
                         </h:outputText>
