--- a/src/main/webapp/Migracao.xhtml
+++ b/src/main/webapp/Migracao.xhtml
@@ -13,7 +13,7 @@
                   
                 <p:toolbar styleClass="r42-toolbar" id="toolbar">
                     <p:toolbarGroup align="left" styleClass="r42-toolbar-right">
-                        <p:outputLabel value="Path: c:\temp\dbf\*.dbf"/>
+                        <p:outputLabel value="Path: /src/main/resources/dbf/*.dbf"/>
                     </p:toolbarGroup>                 
                     <p:toolbarGroup align="right" styleClass="r42-toolbar-right">
                         <p:outputLabel value="Migração de Dados"/>
